--- a/_addaptive.scss
+++ b/_addaptive.scss
@@ -139,6 +139,51 @@
             }
         }
     }
+
+    main {
+        .gallery {
+            &_container {
+
+                &--box {
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    grid-template-rows: repeat(6, 1fr);
+                    gap: 8px;
+
+                    &--img--1 {
+                        grid-row: span 3 / span 3;
+                    }
+
+                    &--img--2 {
+                        grid-column-start: 1;
+                        grid-row-start: 4;
+                    }
+
+                    &--img--3 {
+                        grid-row: span 2 / span 2;
+                        grid-column-start: 1;
+                        grid-row-start: 5;
+                    }
+
+                    &--img--4 {
+                        grid-column-start: 2;
+                        grid-row-start: 1;
+                    }
+
+                    &--img--5 {
+                        grid-row: span 3 / span 3;
+                        grid-column-start: 2;
+                        grid-row-start: 2;
+                    }
+
+                    &--img--6 {
+                        grid-row: span 2 / span 2;
+                        grid-row-start: 5;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media(max-width:1180px) {
@@ -332,9 +377,11 @@
                         width: 100%;
                         max-width: 314px;
                     }
-                    &--box{
+
+                    &--box {
                         margin-bottom: 80px;
-                        &--2{
+
+                        &--2 {
                             margin-bottom: 43px;
                         }
                     }
