--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0;
@@ -355,6 +356,37 @@
   }
   .header_bottom--container--info--img {
     right: 0;
+  }
+  main .gallery_container--box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 8px;
+  }
+  main .gallery_container--box--img--1 {
+    grid-row: span 3/span 3;
+  }
+  main .gallery_container--box--img--2 {
+    grid-column-start: 1;
+    grid-row-start: 4;
+  }
+  main .gallery_container--box--img--3 {
+    grid-row: span 2/span 2;
+    grid-column-start: 1;
+    grid-row-start: 5;
+  }
+  main .gallery_container--box--img--4 {
+    grid-column-start: 2;
+    grid-row-start: 1;
+  }
+  main .gallery_container--box--img--5 {
+    grid-row: span 3/span 3;
+    grid-column-start: 2;
+    grid-row-start: 2;
+  }
+  main .gallery_container--box--img--6 {
+    grid-row: span 2/span 2;
+    grid-row-start: 5;
   }
 }
 @media (max-width: 1180px) {
@@ -1006,35 +1038,47 @@ main .gallery_container--box {
   width: 1170px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 220px);
-  gap: 8px;
+  grid-template-columns: repeat(3, 370px);
+  grid-template-rows: 210px 130px 130px 210px;
+  gap: 30px;
+  /* LARGE — 370 × 530 */
+  /* SMALL — 370 × 210 */
+  /* MEDIUM — 370 × 370 */
+}
+main .gallery_container--box > div {
+  border-radius: 12px;
+  overflow: hidden;
+}
+main .gallery_container--box > div img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
 }
 main .gallery_container--box--img--1 {
-  grid-row: span 3/span 3;
-}
-main .gallery_container--box--img--2 {
-  grid-column-start: 1;
-  grid-row-start: 4;
-}
-main .gallery_container--box--img--3 {
-  grid-column-start: 2;
-  grid-row-start: 1;
+  grid-column: 1/2;
+  grid-row: 1/4;
 }
 main .gallery_container--box--img--4 {
-  grid-row: span 3/span 3;
-  grid-column-start: 2;
-  grid-row-start: 2;
+  grid-column: 2/3;
+  grid-row: 2/5;
+}
+main .gallery_container--box--img--2 {
+  grid-column: 2/3;
+  grid-row: 1/2;
 }
 main .gallery_container--box--img--5 {
-  grid-row: span 2/span 2;
-  grid-column-start: 3;
-  grid-row-start: 1;
+  grid-column: 1/2;
+  grid-row: 4/5;
+}
+main .gallery_container--box--img--3 {
+  grid-column: 3/4;
+  grid-row: 1/3;
 }
 main .gallery_container--box--img--6 {
-  grid-row: span 2/span 2;
-  grid-column-start: 3;
-  grid-row-start: 3;
+  grid-column: 3/4;
+  grid-row: 3/5;
 }
 main .tutorial {
   width: 100%;
